frontend/src/pages/taskProgressPage.less
@import "../global.less";

.err-container {
  color: @color-error
}

.task-page-loader-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.task-page-title-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  .interrupt-icon {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;

    &.disabled {
      color: @color-neutral;
      cursor: initial;
    }
  }
}

.task-info-fields-container {
  display: flex;
  flex-direction: column;
  .task-info-field {
    .row {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }

    &::after {
      content: " ";
      display: block;
      width: 100%;
      background-color: @color-neutral;
      height: 1px;
    }
  }
}

